[gd_scene load_steps=3 format=3 uid="uid://dlhrrp8eav5sw"]

[ext_resource type="Script" path="res://ui/components/hero_select_popup.gd" id="1_gxtip"]
[ext_resource type="PackedScene" uid="uid://b2nv7a00yb7ht" path="res://ui/components/hero_display_container.tscn" id="2_yaugk"]

[node name="HeroSelectPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gxtip")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="HeaderText" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Select a hero
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Description" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(1200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Select a hero that will venture on a scavenge mission."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HeroOptionButton" type="OptionButton" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
selected = 0
item_count = 1
popup/item_0/text = "Hero"

[node name="HeroDisplayContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_yaugk")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Button" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start"

[connection signal="item_selected" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HeroOptionButton" to="." method="_on_hero_option_button_item_selected"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
